@@ -5,7 +5,7 @@
  ===========================================================
 // Tcl_Obj * tclObj_String = Tcl_NewStringObj( "", -1 );
 fait planter PPC
-
+Tester FICS et mode clavier (l 68 de main.tcl) (en plus avec Novag)
  ===========================================================
 |                                                           |
 |                          BUGS                             |
@@ -17,6 +17,8 @@ fait planter PPC
 |                     FEATURE REQUESTS                      |
 |                                                           |
  ===========================================================
+
+- when FW on or network down, smoothen FICS connection
 
 - Port Scidlet to PPC
 
